service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-backend
  namespace: student
spec:
  type: ClusterIP
  selector:
    app: student-api
  ports:
  - port: 5000
    targetPort: 5000
